--- a/RssFeedTranslator/RssFeedTranslator/MainWindow.xaml
+++ b/RssFeedTranslator/RssFeedTranslator/MainWindow.xaml
@@ -18,7 +18,8 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
-            <Button Content="So shit" Command="{Binding DoSomethingCommand}"/>
+            <Button Content="Do shit" Command="{Binding DoSomethingCommand}"/>
+            <Button Content="Translate" Command="{Binding TranslateArticleCommand}"/>
             <!-- Add additional buttons here... -->
         </StackPanel>
 
@@ -30,6 +31,17 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding SelectedArticle.Summary}" TextWrapping="Wrap"/>
+        <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Vertical">
+            <TextBlock Text="{Binding SelectedArticle.Title}" FontWeight="Bold"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="{Binding SelectedArticle.Summary}" TextWrapping="Wrap"/>
+                <TextBlock Grid.Column="1" Text="{Binding TranslatedSummary}" TextWrapping="Wrap"/>
+            </Grid>
+
+        </StackPanel>
     </Grid>
 </Window>
