--- a/RssFeedTranslator/RssFeedTranslator/App.xaml
+++ b/RssFeedTranslator/RssFeedTranslator/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:RssFeedTranslator"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/ColourDictionaries/SoftDark.xaml"/>
+                <ResourceDictionary Source="Themes/ControlColours.xaml"/>
+                <ResourceDictionary Source="Themes/Controls.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
