--- a/RssFeedTranslator/RssFeedTranslator/App.xaml
+++ b/RssFeedTranslator/RssFeedTranslator/App.xaml
@@ -1,9 +1,16 @@
 ﻿<Application x:Class="RssFeedTranslator.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RssFeedTranslator"
+             xmlns:materialDesign="https://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:materialDesign1="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:local="clr-namespace:RssFeedTranslator" 
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <materialDesign1:BundledTheme BaseTheme="Dark" PrimaryColor="Blue" SecondaryColor="LightBlue" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
