* make WinUI3 frontend work
* placed ViewModels in a seperate project to be shared between WPF and WinUI3 frontend

--- a/RssFeedTranslator/RssFeedTranslator.WinUI3/MainWindow.xaml
+++ b/RssFeedTranslator/RssFeedTranslator.WinUI3/MainWindow.xaml
@@ -8,7 +8,41 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
-    </StackPanel>
+    <Grid x:Name="RootPanel">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
+            <Button Content="Do shit" Command="{Binding DoSomethingCommand}"/>
+            <Button Content="Translate" Command="{Binding TranslateArticleCommand}"/>
+            <!-- Add additional buttons here... -->
+        </StackPanel>
+
+        <ListBox Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Articles}" SelectedItem="{Binding SelectedArticle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Title}"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
+        <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Vertical">
+            <TextBlock Text="{Binding SelectedArticle.Title}" FontWeight="Bold"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="{Binding SelectedArticle.Summary}" TextWrapping="Wrap"/>
+                <TextBlock Grid.Column="1" Text="{Binding TranslatedSummary}" TextWrapping="Wrap"/>
+            </Grid>
+
+        </StackPanel>
+    </Grid>
 </Window>
