--- a/RssFeedTranslator/RssFeedTranslator/MainWindow.xaml
+++ b/RssFeedTranslator/RssFeedTranslator/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RssFeedTranslator"
+        xmlns:vms="clr-namespace:RssFeedTranslator.ViewModels;assembly=RssFeedTranslator.ViewModels"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800"
-        d:DataContext="{d:DesignInstance local:MainWindowViewModel, IsDesignTimeCreatable=True}">
+        d:DataContext="{d:DesignInstance vms:MainWindowViewModel, IsDesignTimeCreatable=True}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
