--- a/RssFeedTranslator/RssFeedTranslator.WinUI3/MainWindow.xaml
+++ b/RssFeedTranslator/RssFeedTranslator.WinUI3/MainWindow.xaml
@@ -6,9 +6,17 @@
     xmlns:local="using:RssFeedTranslator.WinUI3"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:Interactions="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d">
 
     <Grid x:Name="RootPanel" Padding="5">
+        <Interactivity:Interaction.Behaviors>
+            <Interactions:EventTriggerBehavior EventName="Loaded">
+                <Interactions:InvokeCommandAction Command="{Binding DoSomethingCommand}"/>
+            </Interactions:EventTriggerBehavior>
+        </Interactivity:Interaction.Behaviors>
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="2*"/>
