--- a/RssFeedTranslator/RssFeedTranslator.WinUI3/MainWindow.xaml
+++ b/RssFeedTranslator/RssFeedTranslator.WinUI3/MainWindow.xaml
@@ -37,8 +37,18 @@
                     <Setter Property="Margin" Value="5,2,0,2"/>
                 </Style>
             </StackPanel.Resources>
-            <Button Content="Load" Command="{Binding LoadArticlesCommand}"/>
-            <Button Content="Translate" Command="{Binding TranslateArticleCommand}"/>
+            <Button Command="{Binding LoadArticlesCommand}" >
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Symbol="Refresh" Margin="0,0,5,0"/>
+                    <TextBlock Text="Refresh"/>
+                </StackPanel>
+            </Button>
+            <Button Command="{Binding TranslateArticleCommand}">
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Symbol="Send" Margin="0,0,5,0"/>
+                    <TextBlock Text="Translate"/>
+                </StackPanel>
+            </Button>
             <!-- Add additional buttons here... -->
         </StackPanel>
 
