--- a/RssFeedTranslator/RssFeedTranslator/Themes/Controls.xaml
+++ b/RssFeedTranslator/RssFeedTranslator/Themes/Controls.xaml
@@ -1244,7 +1244,7 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type TextElement}" BasedOn="{StaticResource {x:Type TextElement}}">
+    <Style TargetType="{x:Type TextElement}">
         <Setter Property="Foreground" Value="{DynamicResource ABrush.Foreground.Static}"/>
         <Setter Property="RenderOptions.EdgeMode" Value="Unspecified"/>
         <Setter Property="TextOptions.TextRenderingMode" Value="ClearType"/>
@@ -2095,8 +2095,8 @@
                                 <Condition Property="IsMouseOver" Value="True"/>
                                 <Condition Property="IsKeyboardFocused" Value="False"/>
                             </MultiTrigger.Conditions>
-                            <Setter Property="Background" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.Hover.Background}"/>
-                            <Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.Hover.Border}"/>
+                            <!--<Setter Property="Background" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.Hover.Background}"/>
+                            <Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.Hover.Border}"/>-->
                         </MultiTrigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
@@ -2104,16 +2104,16 @@
                                 <Condition Property="IsMouseOver" Value="False"/>
                                 <Condition Property="IsKeyboardFocused" Value="True"/>
                             </MultiTrigger.Conditions>
-                            <Setter Property="Background" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.Selected.Background}"/>
-                            <Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.Selected.Border}"/>
+                            <!--<Setter Property="Background" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.Selected.Background}"/>
+                            <Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.Selected.Border}"/>-->
                         </MultiTrigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
                                 <Condition Property="IsSelected" Value="True"/>
                                 <Condition Property="IsMouseOver" Value="True"/>
                             </MultiTrigger.Conditions>
-                            <Setter Property="Background" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.SelectedHover.Background}"/>
-                            <Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.SelectedHover.Border}"/>
+                            <!--<Setter Property="Background" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.SelectedHover.Background}"/>
+                            <Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.SelectedHover.Border}"/>-->
                         </MultiTrigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
@@ -2121,8 +2121,8 @@
                                 <Condition Property="IsMouseOver" Value="False"/>
                                 <Condition Property="IsKeyboardFocused" Value="False"/>
                             </MultiTrigger.Conditions>
-                            <Setter Property="Background" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.SelectedNoFocus.Background}"/>
-                            <Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.SelectedNoFocus.Border}"/>
+                            <!--<Setter Property="Background" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.SelectedNoFocus.Background}"/>-->
+                            <!--<Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.SelectedNoFocus.Border}"/>-->
                         </MultiTrigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
@@ -2130,7 +2130,7 @@
                                 <Condition Property="IsMouseOver" Value="False"/>
                                 <Condition Property="IsKeyboardFocused" Value="True"/>
                             </MultiTrigger.Conditions>
-                            <Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.Focus.Border}"/>
+                            <!--<Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.Focus.Border}"/>-->
                         </MultiTrigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
@@ -2138,8 +2138,8 @@
                                 <Condition Property="IsMouseOver" Value="True"/>
                                 <Condition Property="IsKeyboardFocused" Value="True"/>
                             </MultiTrigger.Conditions>
-                            <Setter Property="Background" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.HoverFocus.Background}"/>
-                            <Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.HoverFocus.Border}"/>
+                            <!--<Setter Property="Background" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.HoverFocus.Background}"/>-->
+                            <!--<Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource ComboBoxItem.ItemView.HoverFocus.Border}"/>-->
                         </MultiTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
