--- a/RssFeedTranslator/RssFeedTranslator/MainWindow.xaml
+++ b/RssFeedTranslator/RssFeedTranslator/MainWindow.xaml
@@ -8,6 +8,7 @@
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800"
+        Style="{DynamicResource CustomWindowStyle}"
         d:DataContext="{d:DesignInstance vms:MainWindowViewModel, IsDesignTimeCreatable=True}">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
@@ -27,21 +28,23 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2"
-                    Orientation="Horizontal">
+                    Orientation="Horizontal"
+                    Background="#FF2B2B2B">
             <StackPanel.Resources>
-                <Style TargetType="Button">
+                <Style TargetType="Button"  BasedOn="{StaticResource {x:Type Button}}">
                     <Setter Property="Margin" Value="5,2,0,2"/>
                 </Style>
             </StackPanel.Resources>
-            <Button Command="{Binding LoadArticlesCommand}" >
+            <Button Command="{Binding LoadArticlesCommand}">
                 <StackPanel Orientation="Horizontal">
-                    <!--<SymbolIcon Symbol="Refresh" Margin="0,0,5,0"/>-->
+                    <TextBlock FontFamily="Segoe MDL2 Assets" Text="&#xE72C;" VerticalAlignment="Center" Margin="0,0,5,0"/>
                     <TextBlock Text="Refresh"/>
                 </StackPanel>
             </Button>
             <Button Command="{Binding TranslateArticleCommand}">
                 <StackPanel Orientation="Horizontal">
                     <!--<SymbolIcon Symbol="Send" Margin="0,0,5,0"/>-->
+                    <TextBlock FontFamily="Segoe MDL2 Assets" Text="&#xE724;" VerticalAlignment="Center" Margin="0,0,5,0"/>
                     <TextBlock Text="Translate"/>
                 </StackPanel>
             </Button>
